[package]
name = "conparse"
version = "0.0.4"
authors = ["Neil Dunbar <neil.dunbar@pobox.com>"]

[lib]
name = "conparse"
test = true

[dependencies]

#log = "^0.2"
#env_logger = "^0.2"
regex = "^0.1"

[dependencies.posix]

version = "^0.1"
git = "https://github.com/mahkoh/posix.rs.git"

[dependencies.env_logger]

version = "^0.2"
git = "https://github.com/rust-lang/log.git"
